fixed day-time color in calendar.  Fixed overflow on shift checklist

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -116,6 +116,10 @@ ul a:hover {
   background: #C0C0C0;
 }
 
+b {
+  color: white;
+}
+
 /* *************** Calendar Style **********  */
 [class*="cal-cell"] {
   float: left;
